# TheSnask

./: .SRCINFO  .gitattributes  .gitignore  API_DEMO.md  Cargo.toml  PKGBUILD  README.md  ROADMAP_SNASK_GIGANTE.md  SNASK_LOW_LEVEL_PLAN.md  api_demo.snask  blaze.snask  blaze_auth.snask  build.rs  classes.snask  complex_sqlite.snask  ex1  ex1.snask  ex1_hello.snask  ex1_hello_no_comment  ex2  ex2.snask  ex2_vars  ex3  ex3.snask  ex3_loops  ex3_loops.snask  ex4  ex4.snask  ex4_recursion  ex4_recursion.snask  ex5  ex5_classes  ex6.snask  ex6_modules.snask  ex7_zenith.snask  ex8_om  ex8_om.snask  hello.snask  hello_tupi  hello_tupi.snask  (+36 more)
Testes/: main.snask  om_import_c_zlib.snask  om_sdl2_platform.snask  om_sdl2_poll_event.snask  om_sdl2_renderer_zone.snask  om_sdl2_surface_zone.snask  om_sdl2_window_zone.snask  om_sqlite_phase2.snask  om_sqlite_statement.snask  om_sqlite_statement_nested.snask  om_sqlite_statement_return.snask  om_stdio_printf.snask  om_stdio_puts.snask  om_zlib_roundtrip.snask  om_zone_if_return.snask  om_zone_nested_return.snask  om_zone_normal.snask  om_zone_return.snask  test_intrinsics  test_intrinsics.snask  test_print_snask  test_print_snask.snask
bench/: README.md  run.sh
contracts/: sqlite.om.snif  stdio.om.snif  zlib.om.snif
docs/: APRENDA_SNASK.md  ARCHITECTURE.md  ARQUIVOS.md  BIBLIOTECAS_SNASK.md  CHANGELOG_COMPILER_V1.md  COMPARISON_2025-07_vs_2026-02.md  COMPARISON_2025-07_vs_2026-02_pt-BR.md  CRIANDO_BIBLIOTECAS_SNASK.md  FEATURE_STATUS.md  GUIA_SNASK.md  HUMANE_DIAGNOSTICS.md  INDEX.md  LANGUAGE_REFERENCE.md  LEARN_SNASK.md  LSP.md  (+18 more)
(+635 files in other folders)
