[package]
name = "snask"
version = "0.2.2"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
git2 = "0.18"
directories = "5"
dirs = "5"
url = "2"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
rouille = "3.6.2"
chrono = "0.4.42"
lazy_static = "1.5.0"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
rusqlite = { version = "0.31.0", features = ["bundled"] } # Adicione esta linha
